--- a/trunk/TAO/tests/Param_Test/Makefile
+++ b/trunk/TAO/tests/Param_Test/Makefile
@@ -76,12 +76,23 @@ VBIN = $(BIN:%=%$(VAR))
 #----------------------------------------------------------------------------
 
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
+
+ifeq ($(ACE_HAS_GNUG_PRE_2_8),1)
+
+  # Since older g++ cannot handle nested classes properly, this test
+  # will not build on g++ prior to 2.8.0.
+  all clean realclean:
+	@echo tests/Param_Test is not built with older versions of g++
+
+else # ! ACE_HAS_GNUG_PRE_2_8
+
 include $(ACE_ROOT)/include/makeinclude/macros.GNU
 include $(TAO_ROOT)/rules.tao.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.common.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
-#include $(ACE_ROOT)/include/makeinclude/rules.bin.GNU
+include $(ACE_ROOT)/include/makeinclude/rules.bin.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
+include $(TAO_ROOT)/taoconfig.mk
 
 TSS_ORB_FLAG = #-DTAO_HAS_TSS_ORBCORE
 CPPFLAGS += -I$(TAO_ROOT) $(TSS_ORB_FLAG)
@@ -101,6 +112,8 @@ clean:
 
 realclean: clean
 	-/bin/rm -rf param_testCli.* param_testSer.* param_testSer_T.*
+
+endif # ! ACE_HAS_GNUG_PRE_2_8
 
 # DO NOT DELETE THIS LINE -- g++dep uses it.
 # DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
